[gd_scene format=3 uid="uid://kpuebpfvjx8p"]

[ext_resource type="Script" uid="uid://7jks0rmne4x6" path="res://scripts/App.gd" id="1_3g6j8"]

[node name="App" type="Control" unique_id=980382618]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3g6j8")

[node name="InternalViewportContainer" type="SubViewportContainer" parent="." unique_id=1231035864]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = false

[node name="InternalViewport" type="SubViewport" parent="InternalViewportContainer" unique_id=642603260]
handle_input_locally = false
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="WorldRoot" type="Node2D" parent="InternalViewportContainer/InternalViewport" unique_id=1962165849]
position = Vector2(0, 0)

[node name="AudioPlayer" type="AudioStreamPlayer" parent="." unique_id=1988534365]
